Fix typo in cyapa out of bounds check.

PR:		217783
Submitted by:	razmyslov@viva64.com
MFC after:	1 week

Former-commit-id: cf01df823a069a250dbd0261441548a04a2c2517